# HyperPersonalisation

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt
configs/: hyperpersonalisation_all.json  wav2vec.json
hyperformer/: adapters.py  multitask_sampler.py
hyperpersonalisation/: data.py  metrics.py  trainer.py  training_args.py  utils.py
scripts/: hyperpersonalisation.sh  wav2vec.sh
