[tool.poetry]
name = "HyperPersonalisation"
version = "0.1.0"
description = "pyproject for HyperPersonalisation"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
torch = "^2.0.0"
transformers = "^4.27.3"
pandas = "^1.5.3"
datasets = "^2.10.1"
torchaudio = "^2.0.1"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
pyreadstat = "^1.2.1"



[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


